fixing image css and text alignment
for some reason post #2 is shade-four instead of shade-three, not sure why

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -708,11 +708,20 @@
 
 			&.shade-three {
 				background-color: #ecf1f1;
-				text-align: left;
+				text-align: left	;
 			}
 
 			&.shade-four {
-				background-color: #e8edec;
+				background-color: #ecf1f1;
+				text-align: left	;
+			}
+			
+			.img-responsive {
+				width: 100%			;
+				max-width: 350px;
+				float: left;
+				padding-right: 20px;
+				padding-bottom: 0px;
 			}
 		}
 	}
